# travel-planner

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
apps/projects/: models.py  serializers.py  services.py  urls.py  views.py
apps/projects/migrations/: 0001_initial.py
config/: settings.py  urls.py
